--- a/application-prod.yaml
+++ b/application-prod.yaml
@@ -75,7 +75,7 @@ resilience4j:
         permitted-number-of-calls-in-half-open-state: 4
         wait-duration-in-open-state: 1000
       
-      createEntityProductCB:
+      createEntityCB:
         failure-rate-threshold: 100
         sliding-window-size: 10
         sliding-window-type: count-based
