--- a/application-prod.yaml
+++ b/application-prod.yaml
@@ -125,3 +125,12 @@ resilience4j:
         automatic-transition-from-open-to-half-open-enabled: true
         permitted-number-of-calls-in-half-open-state: 4
         wait-duration-in-open-state: 5000
+      
+      addDispRequestEntityCB:
+        failure-rate-threshold: 100
+        sliding-window-size: 10
+        sliding-window-type: count-based
+        minimum-number-of-calls: 2
+        automatic-transition-from-open-to-half-open-enabled: true
+        permitted-number-of-calls-in-half-open-state: 4
+        wait-duration-in-open-state: 5000  
