--- a/application-prod.yaml
+++ b/application-prod.yaml
@@ -135,16 +135,7 @@ resilience4j:
         permitted-number-of-calls-in-half-open-state: 4
         wait-duration-in-open-state: 5000  
         
-      startProcessCB:
-        failure-rate-threshold: 100
-        sliding-window-size: 10
-        sliding-window-type: count-based
-        minimum-number-of-calls: 2
-        automatic-transition-from-open-to-half-open-enabled: true
-        permitted-number-of-calls-in-half-open-state: 4
-        wait-duration-in-open-state: 5000    
-     
-      stopProcessCB:
+      removeDispRequestEntityCB:
         failure-rate-threshold: 100
         sliding-window-size: 10
         sliding-window-type: count-based
@@ -152,4 +143,3 @@ resilience4j:
         automatic-transition-from-open-to-half-open-enabled: true
         permitted-number-of-calls-in-half-open-state: 4
         wait-duration-in-open-state: 5000
-
